--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,7 +102,7 @@ ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Textures
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/StealthGuy/Animation
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -732,12 +732,12 @@ SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
 ScreenPosition=X=332.000 Y=324.000
-ScreenPosition=X=989.000 Y=-17.000
+ScreenPosition=X=635.000 Y=335.000
 None=======
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
@@ -1332,6 +1332,8 @@ PhysicsAssetEditor.TimeStamp=2018.02.02-12.46.41
 PhysicsAssetEditor.LastCompileMethod=Unknown
 AnimationBlueprintEditor.TimeStamp=2018.02.02-12.46.35
 AnimationBlueprintEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2018.02.02-12.46.35
+AnimationEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 AI_Patroll_C.Tick=True
