--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ProjectEspionage
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TestMap.TestMap
-GameDefaultMap=/Game/TopDownBP/Maps/TestMap.TestMap
+EditorStartupMap=/Game/TopDownBP/Maps/MenuLevel.MenuLevel
+GameDefaultMap=/Game/TopDownBP/Maps/MenuLevel.MenuLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -116,5 +116,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
